attemptig to start UI design

--- a/midi_android/app/build.gradle
+++ b/midi_android/app/build.gradle
@@ -21,7 +21,9 @@ android {
 repositories {
     maven { url 'https://github.com/kshoji/JFugue-for-Android/raw/master/jfugue-android/snapshot' }
     maven { url 'https://github.com/kshoji/USB-MIDI-Driver/raw/master/MIDIDriver/snapshots' }
-    maven { url 'https://github.com/kshoji/javax.sound.midi-for-Android/raw/develop/javax.sound.midi/repository' }
+    maven {
+        url 'https://github.com/kshoji/javax.sound.midi-for-Android/raw/develop/javax.sound.midi/repository'
+    }
 }
 
 dependencies {
