--- a/midi_android/app/src/main/AndroidManifest.xml
+++ b/midi_android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".MusicActivity"></activity>
+        <activity android:name=".TutorialPage"></activity>
+        <activity android:name=".MusicActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".LandingPage">
             <intent-filter>
